--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,10 @@
         android:text="schedule"
         android:onClick="schedule"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:text="camera"
+        android:onClick="camera"
+        android:layout_height="wrap_content" />
 </LinearLayout>
