--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,5 +34,8 @@
         android:onClick="test"
         android:layout_height="wrap_content" />
 
-
+    <TextView
+        android:id="@+id/tv_test"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
