--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,12 @@
         android:onClick="test"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:text="滚筒"
+        android:onClick="wheel"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/tv_test"
         android:layout_width="match_parent"
