--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,11 @@
         android:text="滚筒"
         android:onClick="wheel"
         android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="wrap_content"
+        android:text="InputFilter"
+        android:onClick="inputFilter"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tv_test"
