--- a/app/src/main/res/layout/activity_list_anim_header.xml
+++ b/app/src/main/res/layout/activity_list_anim_header.xml
@@ -6,8 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.jqyzyh.learn.ListAnimHeaderActivity">
 
-    <ListView
+    <jqyzyh.iee.cusomwidget.pullrefreshlistview.PullRefreshListView
         android:id="@+id/lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:onClick="refresh"
+        android:text="refresh"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
