--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,11 @@
         android:text="InputFilter"
         android:onClick="inputFilter"
         android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="wrap_content"
+        android:text="playsound"
+        android:onClick="playsound"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tv_test"
