--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,12 @@
         android:onClick="playsound"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:onClick="love"
+        android:text="love"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/tv_test"
         android:layout_width="match_parent"
