--- a/app/src/main/res/layout/activity_play_sound.xml
+++ b/app/src/main/res/layout/activity_play_sound.xml
@@ -38,4 +38,9 @@
         android:text="扬声器"
         android:onClick="yangshengqi"
         android:layout_height="wrap_content" />
+
+    <SeekBar
+        android:id="@+id/sb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
