--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -8,21 +8,26 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.jqyzyh.learn.WebViewActivity">
+
+    <android.support.v7.widget.Toolbar
+    android:id="@+id/toolbar"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent" />
     <WebView
+        android:layout_below="@id/toolbar"
         android:id="@+id/wv"
         android:layout_width="match_parent"
-        android:visibility="gone"
         android:layout_height="match_parent"/>
 
-    <jqyzyh.iee.cusomwidget.mediaplayer.TextureVideoView
-        android:layout_width="200dp"
-        android:layout_centerVertical="true"
-        android:id="@+id/tv"
-        android:layout_height="200dp" />
+    <!--<jqyzyh.iee.cusomwidget.mediaplayer.TextureVideoView-->
+        <!--android:layout_width="200dp"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:id="@+id/tv"-->
+        <!--android:layout_height="200dp" />-->
 
-    <Button
-        android:layout_width="wrap_content"
-        android:text="bofang"
-        android:onClick="bofang"
-        android:layout_height="wrap_content" />
+    <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:text="bofang"-->
+        <!--android:onClick="bofang"-->
+        <!--android:layout_height="wrap_content" />-->
 </RelativeLayout>
