--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:text="自动布局"
+            android:onClick="wrapLayout"
+            android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/tv_test"
             android:layout_width="match_parent"
