--- a/cusomwidget/src/main/res/values/attrs.xml
+++ b/cusomwidget/src/main/res/values/attrs.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="RoundRectImageView">
-    <attr name="imageRadius" format="dimension"/>
-    <attr name="roundType" format="enum">
-        <enum name="all" value="1"/>
-        <enum name="left" value="2"/>
-        <enum name="rigth" value="3"/>
-        <enum name="top" value="4"/>
-        <enum name="bottom" value="5"/>
-    </attr>
+        <attr name="imageRadius" format="dimension" />
+        <attr name="roundType" format="enum">
+            <enum name="all" value="1" />
+            <enum name="left" value="2" />
+            <enum name="rigth" value="3" />
+            <enum name="top" value="4" />
+            <enum name="bottom" value="5" />
+        </attr>
+    </declare-styleable>
+
+    <declare-styleable name="WrapLayout">
+        <attr name="gravity" format="enum">
+            <enum name="left" value="3" />
+            <enum name="center_horizontal" value="1" />
+            <enum name="rigth" value="5" />
+        </attr>
+        <attr name="horizontalSpacing" format="dimension" />
+        <attr name="verticalSpacing" format="dimension" />
+
     </declare-styleable>
 </resources>
