--- a/app/src/main/res/layout/activity_wheel_view.xml
+++ b/app/src/main/res/layout/activity_wheel_view.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:background="#fff"
+    android:background="?attr/base_background"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.jqyzyh.learn.WheelViewActivity">
     <jqyzyh.iee.cusomwidget.wheelloop.LoopView
