--- a/mdemo/src/main/res/layout/activity_main.xml
+++ b/mdemo/src/main/res/layout/activity_main.xml
@@ -23,4 +23,8 @@
         android:onClick="click2"
         android:layout_marginTop="80dp"
         android:layout_height="wrap_content" />
+    <SeekBar
+        android:layout_width="wrap_content"
+        style="@android:style/Widget.Material.SeekBar.Discrete"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
