--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,6 +88,12 @@
             android:text="night"
             android:layout_height="wrap_content" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:onClick="qqdrawer"
+            android:text="qqdrawer"
+            android:layout_height="wrap_content" />
+
         <Switch
             android:layout_width="wrap_content"
             android:textOff="off"
