--- a/cusomwidget/src/main/res/values/attrs.xml
+++ b/cusomwidget/src/main/res/values/attrs.xml
@@ -22,4 +22,12 @@
         <attr name="verticalSpacing" format="dimension" />
 
     </declare-styleable>
+
+    <declare-styleable name="QQDrawerLayout">
+        <attr name="DrawerType" format="enum">
+            <enum name="content" value="0" />
+            <enum name="left" value="1" />
+            <enum name="right" value="2" />
+        </attr>
+    </declare-styleable>
 </resources>
