--- a/app/src/main/res/layout/activity_wheel_view.xml
+++ b/app/src/main/res/layout/activity_wheel_view.xml
@@ -1,41 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relay_cotent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:background="?attr/base_background"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.jqyzyh.learn.WheelViewActivity">
-    <jqyzyh.iee.cusomwidget.wheelloop.LoopView
-        android:id="@+id/test"
-        android:layout_width="match_parent"
 
-        android:layout_height="120dp" >
-    </jqyzyh.iee.cusomwidget.wheelloop.LoopView>
 
-    <View
-        android:layout_width="match_parent"
-        android:background="@drawable/white_mask_1"
-        android:layout_height="30dp"/>
-    <View
-        android:layout_alignBottom="@id/test"
-        android:layout_width="match_parent"
-        android:background="@drawable/white_mask_2"
-        android:layout_height="30dp"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:background="#fff"
-        android:layout_height="match_parent">
+    <jqyzyh.iee.cusomwidget.wheelloop.RollerView
+        android:id="@+id/rv2"
+        android:layout_centerHorizontal="true"
+        android:layout_width="30dp"
+        android:layout_height="wrap_content"/>
+    <jqyzyh.iee.cusomwidget.wheelloop.RollerView
+        android:id="@+id/rv1"
+        android:layout_toLeftOf="@id/rv2"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content" />
 
-        <DatePicker
+    <jqyzyh.iee.cusomwidget.wheelloop.RollerView
+        android:id="@+id/rv3"
+        android:layout_width="30dp"
+        android:layout_toRightOf="@id/rv2"
+        android:layout_height="wrap_content" />
+
+    <!--<jqyzyh.iee.cusomwidget.wheelloop.LoopView-->
+    <!--android:id="@+id/test"-->
+    <!--android:layout_width="300dp"-->
+    <!--android:layout_marginLeft="40dp"-->
+    <!--android:layout_height="120dp"-->
+    <!--android:layout_alignParentTop="true"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:layout_alignParentStart="true">-->
+    <!--</jqyzyh.iee.cusomwidget.wheelloop.LoopView>-->
+
+    <!--<View-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:background="@drawable/white_mask_1"-->
+    <!--android:layout_height="30dp"/>-->
+    <!--<View-->
+    <!--android:layout_alignBottom="@id/test"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:background="@drawable/white_mask_2"-->
+    <!--android:layout_height="30dp"/>-->
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:onClick="click"
+        android:text="点我" />
+    <!--<RelativeLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:background="#fff"-->
+    <!--android:layout_height="match_parent">-->
+
+    <!--<DatePicker-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:datePickerMode="spinner"-->
+    <!--android:calendarViewShown="false"-->
+    <!--android:spinnersShown="true"-->
+    <!--android:layout_height="wrap_content"></DatePicker>-->
+    <!--</RelativeLayout>-->
+
+    <LinearLayout
+        android:id="@+id/lilay_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
+        android:orientation="vertical">
+
+        <SeekBar
+            android:id="@+id/sb_y"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_y"
             android:layout_width="wrap_content"
-            android:datePickerMode="spinner"
-            android:calendarViewShown="false"
-            android:spinnersShown="true"
-            android:layout_height="wrap_content"></DatePicker>
-    </RelativeLayout>
+            android:layout_height="wrap_content" />
+
+        <SeekBar
+            android:id="@+id/sb_z"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_z"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 </RelativeLayout>
