--- a/mdemo/src/main/res/layout/activity_main.xml
+++ b/mdemo/src/main/res/layout/activity_main.xml
@@ -2,29 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.jqyzyh.mdemo.MainActivity">
 
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <ImageView
+        android:id="@+id/iv"
+        android:onClick="click1"
+        android:background="#fff"
+        android:layout_width="match_parent"
+        android:layout_height="300dp" />
 
     <Button
         android:layout_width="wrap_content"
-        android:text="点我点我"
-        android:onClick="click1"
-        android:layout_marginTop="30dp"
-        android:layout_height="wrap_content" />
-    <Button
-        android:layout_width="wrap_content"
-        android:text="点我点我"
-        android:onClick="click2"
-        android:layout_marginTop="80dp"
-        android:layout_height="wrap_content" />
-    <SeekBar
-        android:layout_width="wrap_content"
-        style="@android:style/Widget.Material.SeekBar.Discrete"
+        android:text="点点点"
+        android:onClick="clickweb"
         android:layout_height="wrap_content" />
 </RelativeLayout>
