--- a/cusomwidget/src/main/res/values/attrs.xml
+++ b/cusomwidget/src/main/res/values/attrs.xml
@@ -34,7 +34,8 @@
     <declare-styleable name="ColorIndicator">
         <attr name="IndicatorColor" format="color"/>
         <attr name="NormalColor" format="color"/>
-        <attr name="TextSize" format="dimension"/>
+        <attr name="IndicatorTextSize" format="dimension"/>
+        <attr name="NormalTextSize" format="dimension"/>
         <attr name="TabSpace" format="dimension"/>
         <attr name="IndicatorTypeface" format="enum">
             <enum name="normal" value="0" />
