--- a/app/src/main/res/layout/activity_wrap_layout.xml
+++ b/app/src/main/res/layout/activity_wrap_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.jqyzyh.learn.WrapLayoutActivity">
-    <jqyzyh.iee.cusomwidget.WrapLayout
+    <jqyzyh.iee.cusomwidget.WordWrapLayout
         android:id="@+id/wraplayout"
         app:gravity="center_horizontal"
         app:horizontalSpacing="10dp"
@@ -14,5 +14,5 @@
         android:layout_width="match_parent"
         android:background="#8000ff00"
         android:layout_height="wrap_content">
-    </jqyzyh.iee.cusomwidget.WrapLayout>
+    </jqyzyh.iee.cusomwidget.WordWrapLayout>
 </RelativeLayout>
