--- a/cusomwidget/src/main/res/values/attrs.xml
+++ b/cusomwidget/src/main/res/values/attrs.xml
@@ -12,11 +12,11 @@
         </attr>
     </declare-styleable>
 
-    <declare-styleable name="WrapLayout">
+    <declare-styleable name="WordWrapLayout">
         <attr name="gravity" format="enum">
             <enum name="left" value="3" />
             <enum name="center_horizontal" value="1" />
-            <enum name="rigth" value="5" />
+            <enum name="right" value="5" />
         </attr>
         <attr name="horizontalSpacing" format="dimension" />
         <attr name="verticalSpacing" format="dimension" />
